--- a/website/pages/index.html
+++ b/website/pages/index.html
@@ -28,7 +28,7 @@
     </div>
   </div>
 
-  <!-- Signup Popup -->
+  <!-- Signup Popup -->.
   <div class="popup-overlay" id="signupPopup" onclick="closePopup(event, 'signupPopup')">
     <div class="popup-box" onclick="event.stopPropagation()">
       <h2>Sign Up</h2>
