סידרתי את הבעיה המזדיינת הזאת

--- a/website/pages/Compare.html
+++ b/website/pages/Compare.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="compare.css" />
     <button id="logOutButton">log out</button>
     <script src="compare.js" type="module"></script>
+    <table>
+        <tr>
+            <th></th>
+            <th></th>
+        </tr>
+        <tr>
+            <td></td>
+        </tr>
+    </table>
+    <table></table>
 </body>
 
 </html>
