הוספתי עוד שתי עמודות

--- a/website/pages/Compare.html
+++ b/website/pages/Compare.html
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
-<head></head>
+<head>
+  <meta charset="UTF-8">
+
+</head>
 
 <body>
-    <link rel="stylesheet" href="compare.css" />
-    <button id="logOutButton">log out</button>
-    <script src="compare.js" type="module"></script>
+  <div class="container">
     <table>
-        <tr>
-            <th></th>
-            <th></th>
-        </tr>
-        <tr>
-            <td></td>
-        </tr>
+      <tr>
+        <td>Cell 1</td>
+      </tr>
+      <tr>
+        <td></td>
+      </tr>
     </table>
-    <table></table>
+
+    <table>
+      <tr>
+        <td>Cell 1</td>
+      </tr>
+      <tr>
+        <td></td>
+      </tr>
+    </table>
+  </div>
 </body>
 
 </html>
+    <link rel="stylesheet" href="compare.css" />
