--- a/website/pages/index.html
+++ b/website/pages/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
-<!-- <html lang="en"> -->
 
 <head>
-  <!-- <meta charset="UTF-8" /> -->
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
   <title>Car Catalog</title>
   <link rel="stylesheet" href="index.css" />
 </head>
@@ -41,3 +38,6 @@
 </body>
 
 </html>
+    <link rel="stylesheet" href="compare.css" />
+    <button id="logOutButton">log out</button>
+    <script src="compare.js" type="module"></script>
