עוד טיפה שינויים

--- a/website/pages/Compare.html
+++ b/website/pages/Compare.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+
   <div class="container">
     <table>
       <tr>
@@ -29,4 +30,6 @@
 </body>
 
 </html>
-    <link rel="stylesheet" href="compare.css" />
+        <link rel="stylesheet" href="compare.css" />
+    <button id="logOutButton">log out</button>
+    <script src="compare.js" type="module"></script>
