--- a/website/pages/index.html
+++ b/website/pages/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
+<html lang="en" dir="ltr">
 
 <head>
+  <meta charset="UTF-8" />
   <title>Car Catalog</title>
   <link rel="stylesheet" href="index.css" />
+
 </head>
 
 <body>
@@ -14,6 +17,9 @@
     </div>
   </header>
 
+   <div class="welcome-text">Welcome! Please choose an option below:</div>
+   <div id="ql"> Already have an account?</div>
+   <div id="qs">Don't have an account?</div>
 
   <div class="popup-overlay" id="loginPopup">
     <div class="popup-box" onclick="event.stopPropagation()">
@@ -33,11 +39,20 @@
       <button id="submitsignup">Submit</button>
     </div>
   </div>
+  <!-- כפתור עגול עם אייקון info -->
+<button class="info-btn" id="infoButton">ℹ️</button>
+
+<!-- פופאפ מידע -->
+<div class="info-popup" id="infoPopup">
+  <div class="info-content">
+    <span class="close-btn" id="closeInfo">&times;</span>
+    <h2>על האתר</h2>
+    <p>זהו קטלוג רכבים אינטרנטי שמציג מידע על רכבים לפי קטגוריות שונות. האתר נבנה כדי לאפשר למשתמשים לסקור ולבחור רכבים בצורה פשוטה ונוחה.</p>
+  </div>
+</div>
+
 
   <script src="index.js" type="module"></script>
 </body>
 
 </html>
-    <link rel="stylesheet" href="compare.css" />
-    <button id="logOutButton">log out</button>
-    <script src="compare.js" type="module"></script>
