--- a/website/pages/index.html
+++ b/website/pages/index.html
@@ -29,6 +29,7 @@
       <button id="submitlogin">Submit</button>
     </div>
   </div>
+  <button class="circle-btn">!</button>
 
   <div class="popup-overlay" id="signupPopup">
     <div class="popup-box" onclick="event.stopPropagation()">
@@ -39,18 +40,6 @@
       <button id="submitsignup">Submit</button>
     </div>
   </div>
-  <!-- כפתור עגול עם אייקון info -->
-<button class="info-btn" id="infoButton">ℹ️</button>
-
-<!-- פופאפ מידע -->
-<div class="info-popup" id="infoPopup">
-  <div class="info-content">
-    <span class="close-btn" id="closeInfo">&times;</span>
-    <h2>על האתר</h2>
-    <p>זהו קטלוג רכבים אינטרנטי שמציג מידע על רכבים לפי קטגוריות שונות. האתר נבנה כדי לאפשר למשתמשים לסקור ולבחור רכבים בצורה פשוטה ונוחה.</p>
-  </div>
-</div>
-
 
   <script src="index.js" type="module"></script>
 </body>
