--- a/website/pages/index.html
+++ b/website/pages/index.html
@@ -1,51 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <title>Car Catalog</title>
   <link rel="stylesheet" href="index.css" />
-
 </head>
-
 <body>
   <header class="header">
-    <h1 class="title"> Car Catalog 🚗</h1>
-    <div class="buttons">
-      <button id="loginbutton" class="btn">Login🔓</button>
-      <button id="signupbutton" class="btn btn-secondary">Sign Up📝</button>
-    </div>
+    <h1 class="title">🚗 Car Catalog</h1>
+    <p class="subtitle">Compare your dream cars, all in one place</p>
   </header>
-      <p class="subtitle">Log in now to start comparing cars</p>
 
-   <div id="q1"> Already have an account?</div>
-   <div id="q2">Don't have an account?</div>
+  <main class="main-content">
+    <div class="action-area">
+      <button id="loginbutton" class="btn">🔓 Login</button>
+      <span class="login q">Already have an account?</span>
+      <button id="signupbutton" class="btn btn-secondary">📝 Sign Up</button>
+      <span class="sign">Don't have an account yet?</span>
+    </div>
+  </main>
 
- <button id="infobutton">❓</button>
+
+<button id="infobutton" title="Need Help?">❓</button>
+<div id="infobox-overlay">
+  <div id="infobox-popup" onclick="event.stopPropagation()">
+    <h2>Welcome to Car Catalog!</h2>
+    <p>Car Catalog is your ultimate tool for comparing cars side-by-side with ease and clarity.
+    Whether you're looking for your first car or upgrading to your dream ride – we're here to help.</p>
+      <p>Ready to get started? Sign up or log in above to begin comparing!</p>
+    <button id="infobox-close">Close</button>
+  </div>
+</div>
+
+
 
   <div class="popup-overlay" id="loginPopup">
     <div class="popup-box" onclick="event.stopPropagation()">
       <h2>Login</h2>
-      <input type="text" placeholder="Username" id="loginusername">
-      <input type="password" placeholder="Password" id="loginpassword">
-      <button id="submitlogin">Submit</button>
+      <input type="text" placeholder="Username" id="loginusername" />
+      <input type="password" placeholder="Password" id="loginpassword" />
+      <button id="submitlogin">Login</button>
     </div>
   </div>
 
   <div class="popup-overlay" id="signupPopup">
     <div class="popup-box" onclick="event.stopPropagation()">
-      <h2>Signup</h2>
-      <input type="text" placeholder="Username" id="signupusername">
-      <input type="password" placeholder="Password" id="signuppassword">
-      <input type="password" placeholder="Confirm Password" id="signupconfirmpassword">
-      <button id="submitsignup">Submit</button>
+      <h2>Sign Up</h2>
+      <input type="text" placeholder="Username" id="signupusername" />
+      <input type="password" placeholder="Password" id="signuppassword" />
+      <input type="password" placeholder="Confirm Password" id="signupconfirmpassword" />
+      <button id="submitsignup">Register</button>
     </div>
+  </div>
+
+<button id="whyus-btn">✨ Why Choose Us?</button>
+<div id="whyus-overlay">
+  <div id="whyus-box" onclick="event.stopPropagation()">
+    <h2>Why Choose Car Catalog?</h2>
+    <ul id="whyus-list">
+      <li>🚗 Compare over 500 cars side-by-side</li>
+      <li>💰You don't have to spend money to use this site</li>
+      <li>⚡ Always here to serve you</li>
+      <li>🛡️ 100% secure and easy to use</li>
+    </ul>
+    <button id="whyus-close">Close</button>
+  </div>
+</div>
 
 
   <script src="index.js" type="module"></script>
 </body>
-
 </html>
+
          <!-- <link rel="stylesheet" href="compare.css" />
     <button id="logOutButton">log out</button>
     <script src="compare.js" type="module"></script>
