הוספתי עוד עמוד לאתר ועמוד 404

--- a/website/pages/404.html
+++ b/website/pages/404.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-  <title>404</title>
-</head>
+  <meta charset="UTF-8">
+  <title>404 - Page Not Found</title>
+    <link rel="stylesheet" href="404.css" />
 
+</head>
 <body>
 
-  <h1>404 - Not Found</h1>
-  <div>The page you were looking for doesn't exist :(</div>
-  
-  <br>
+  <div class="title">404</div>
+  <div class="message">Oops! The page you're looking for doesn't exist.<br>Maybe you took a wrong turn?</div>
 
-  <a href="/website/pages/index.html">Go to the main page</a>
+  <a href="/website/pages/index.html" class="btn">Go to the main page</a>
+
+  <div class="road"></div>
+
 </body>
-
 </html>
