שיניתי טיפה בקופסת ההשוואות

--- a/website/pages/Compare.html
+++ b/website/pages/Compare.html
@@ -8,58 +8,57 @@
 </head>
 
 <body>
+    <button id="logOutButton">log out</button>
+
 
   <div id="title">Compare Cars</div>
 
   <div class="compare-wrapper">
-    <!-- Car 1 -->
+
     <div class="car-box">
       <h3>Car 1</h3>
-      <label for="salectcar1">Select Car</label>
-      <select id="salectcar1">
-        <option>------------------------------------------------</option>
-        <option>lamborgini</option>
-        <option>hacadilak shel aba</option>
+      <label for="selectcar1">Select Car</label>
+      <select id="selectcar1">
+        <option id="lamborgini">lamborgini</option>
+        <option id="cadilac">cadilac</option>
         <option>kia</option>
         <option>mizubishi</option>
       </select>
 
-      <label for="textarea1">Model</label>
-      <textarea id="textarea1"></textarea>
+      <label for="div1">Model</label>
+      <div id="div1"></div>
 
-      <label for="textarea3">Price</label>
-      <textarea id="textarea3"></textarea>
+      <label for="div3">Price</label>
+      <div id="div3"></div>
 
-      <label for="textarea5">Year</label>
-      <textarea id="textarea5"></textarea>
+      <label for="div5">Year</label>
+      <div id="div5"></div>
 
-      <label for="textarea7">Engine</label>
-      <textarea id="textarea7"></textarea>
+      <label for="div7">Engine</label>
+      <div id="div7"></div>
     </div>
 
-    <!-- Car 2 -->
     <div class="car-box">
       <h3>Car 2</h3>
-      <label for="salectcar2">Select Car</label>
-      <select id="salectcar2">
-        <option>------------------------------------------------</option>
+      <label for="selectcar2">Select Car</label>
+      <select id="selectcar2">
         <option>lamborgini</option>
         <option>hacadilak shel aba</option>
         <option>kia</option>
         <option>mizubishi</option>
       </select>
 
-      <label for="textarea2">Model</label>
-      <textarea id="textarea2"></textarea>
+      <label for="div2">Model</label>
+      <div id="div2">aventador</div>
 
-      <label for="textarea4">Price</label>
-      <textarea id="textarea4"></textarea>
+      <label for="div4">Price</label>
+      <div id="div4">2,500,000$</div>
 
-      <label for="textarea6">Year</label>
-      <textarea id="textarea6"></textarea>
+      <label for="div6">Year</label>
+      <div id="div6">2023</div>
 
-      <label for="textarea8">Engine</label>
-      <textarea id="textarea8"></textarea>
+      <label for="div8">Engine</label>
+      <div id="div8">V12</div>
     </div>
   </div>
 
