--- a/website/pages/Compare.html
+++ b/website/pages/Compare.html
@@ -35,7 +35,7 @@
       <label for="div5">Year</label>
       <div id="div5"></div>
 
-      <label for="div7">Engine</label>
+      <label for="div7">Horsepower</label>
       <div id="div7"></div>
     </div>
 
@@ -59,7 +59,7 @@
       <label for="div6">Year</label>
       <div id="div6"></div>
 
-      <label for="div8">Engine</label>
+      <label for="div8">Horsepower</label>
       <div id="div8"></div>
     </div>
   </div>
@@ -75,7 +75,7 @@
       <input type="text" id="inputModel" placeholder="Model" />
       <input type="number" id="inputPrice" placeholder="Price" />
       <input type="number" id="inputYear" placeholder="Year" />
-      <input type="text" id="inputEngine" placeholder="Engine" />
+      <input type="text" id="inputHorsepower" placeholder="Horsepower" />
       <button id="submitCarButton">Add Car</button>
       <button id="closePopupButton">Cancel</button>
     </div>
