סעמק איזה עצבים

--- a/website/pages/Compare.html
+++ b/website/pages/Compare.html
@@ -20,10 +20,10 @@
       <label for="selectcar1">Select Car</label>
       <select id="selectcar1">
         <option>-------------------------------------------------------</option>
-        <option>lamborgini</option>
-        <option>cadilac</option>
-        <option>kia</option>
-        <option>mizubishi</option>
+        <option>Lamborgini</option>
+        <option>Cadilac</option>
+        <option>Kia</option>
+        <option>Mizubishi</option>
       </select>
 
       <label for="div1">Model</label>
@@ -44,10 +44,10 @@
       <label for="selectcar2">Select Car</label>
       <select id="selectcar2">
         <option>------------------------------------------------------</option>
-        <option>lamborgini</option>
-        <option>cadilac</option>
-        <option>kia</option>
-        <option>mizubishi</option>
+        <option>Lamborgini</option>
+        <option>Cadilac</option>
+        <option>Kia</option>
+        <option>Mizubishi</option>
       </select>
 
       <label for="div2">Model</label>
