--- a/website/pages/index.html
+++ b/website/pages/index.html
@@ -39,7 +39,7 @@
       <h2>Login</h2>
       <input type="text" placeholder="Username" id="loginusername" />
       <input type="password" placeholder="Password" id="loginpassword" />
-      <button id="submitlogin">Login</button>
+      <button id="submitlogin">Confirm</button>
     </div>
   </div>
 
