Add user greeting functionality by retrieving username from local storage and displaying it on the compare page

--- a/website/pages/Compare.html
+++ b/website/pages/Compare.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  <div id="welcomeUser" style="text-align:center;font-size:1.5em;margin-bottom:20px;"></div>
   <button id="logOutButton">log out</button>
 
 
