הוספתי ריבוע ירוק להשוואה

--- a/website/pages/Compare.html
+++ b/website/pages/Compare.html
@@ -22,7 +22,7 @@
         <option>-------------------------------------------------------</option>
         <option>Lamborgini</option>
         <option>Cadilac</option>
-        <option>Kia</option>
+        <option>kia</option>
         <option>Mizubishi</option>
       </select>
 
@@ -46,7 +46,7 @@
         <option>------------------------------------------------------</option>
         <option>Lamborgini</option>
         <option>Cadilac</option>
-        <option>Kia</option>
+        <option>kia</option>
         <option>Mizubishi</option>
       </select>
 
