--- a/website/pages/Compare.html
+++ b/website/pages/Compare.html
@@ -10,6 +10,7 @@
 <body>
   <div id="welcomeUser" style="text-align:center;font-size:1.5em;margin-bottom:20px;"></div>
   <button id="logOutButton">log out</button>
+  <a href="history.html" style="position: absolute; top: 10px; right: 10px;">History</a>
 
 
   <div id="title">Compare Cars</div>
