סוףסוף זה לקח נצח

--- a/website/pages/Compare.html
+++ b/website/pages/Compare.html
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-  <div id="welcomeUser" style="text-align:center;font-size:1.5em;margin-bottom:20px;"></div>
+  <div id="welcomeUser" ></div>
   <button id="logOutButton">log out</button>
-  <a href="history.html" style="position: absolute; top: 10px; right: 10px;">History</a>
+  <a href="history.html" class="history-button">History</a>
 
 
   <div id="title">Compare Cars</div>
