--- a/website/pages/history.html
+++ b/website/pages/history.html
@@ -2,25 +2,21 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Comparison History</title>
-    <style>
-
-    </style>
+    <link rel="stylesheet" href="history.css" />
 </head>
 
 <body>
     <h1>Comparison History</h1>
-    <table id="historyTable">
+
+    <table id="historyTable" aria-label="Comparison History Table">
         <thead>
             <tr>
-                <th>Time</th>
-                <th>Left Car</th>
-                <th>Right Car</th>
-                <th>Winner</th>
-                <th>Price</th>
-                <th>Year</th>
-                <th>Horsepower</th>
+                <th scope="col">Date</th>
+                <th scope="col">Left Car</th>
+                <th scope="col">Right Car</th>
+                <th scope="col">Winner</th>
             </tr>
         </thead>
         <tbody></tbody>
